# llm-ai-agents

./: README.md  pyproject.toml
ai-agents/: notes.md
ai-agents/crewai/: notes.md
ai-agents/crewai/agent_crewai/: README.md  pyproject.toml  report.md
ai-agents/crewai/agent_crewai/src/agent_crewai/: crew.py  main.py
ai-agents/n8n/: docker-compose.yml  notes.md
langchain-lib/: hello.py  pyproject.toml
langchain-lib/agents/: basic.py  react-chat.py  react-rag.py  readme.md
langchain-lib/basic-conversation/: main.py
langchain-lib/chains/: branching.py  main.py  parallel.py
langchain-lib/conversation/: main.py
langchain-lib/rag/: basic.py  metadata.py  webscrawler.py
langchain-lib/rag/books/: india.txt  karnataka.txt
langchain-lib/rag/db/chroma_db/: chroma.sqlite3
langchain-lib/rag/db/chroma_db_Web/: chroma.sqlite3
langchain-lib/simple/: main.py
langchain-lib/template/: main.py
