[project]
name = "agent_crewai"
version = "0.1.0"
description = "agent-crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
agent_crewai = "agent_crewai.main:run"
run_crew = "agent_crewai.main:run"
train = "agent_crewai.main:train"
replay = "agent_crewai.main:replay"
test = "agent_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
